# Qt-widget

./: CMakeLists.txt  README.md  getQtDlls.cmake  main.cpp  myclass.cpp  myclass.h  widget.cpp  widget.h  widget.ui
