cmake_minimum_required(VERSION 3.0)
PROJECT(Widget)
 
FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui QtWebkit REQUIRED)
INCLUDE(${QT_USE_FILE})
INCLUDE("getQtDlls.cmake")


SET(UI_FILES
	widget
)

SET(NONUI_FILES
	myclass
)

set(RESOURCES 
	res.qrc
)

FOREACH(FILE ${UI_FILES})
	MESSAGE(${FILE})
	LIST(APPEND UI_FORMS ${FILE}.ui)
	LIST(APPEND UI_HEADERS ${FILE}.h)
	LIST(APPEND UI_SOURCES ${FILE}.cpp)
ENDFOREACH(FILE)

FOREACH(FILE ${NONUI_FILES})
	MESSAGE(${FILE})
	LIST(APPEND UI_HEADERS ${FILE}.h)
	LIST(APPEND UI_SOURCES ${FILE}.cpp)
ENDFOREACH(FILE)

QT4_ADD_RESOURCES(RESOURCES_RCC ${RESOURCES})

QT4_WRAP_UI(UISrcs ${UI_FORMS})
QT4_WRAP_CPP(MOCSrcs ${UI_HEADERS})
 
include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /nologo /Zc:wchar_t-")
ADD_DEFINITIONS(-DUNICODE)
ADD_EXECUTABLE(Widget main.cpp ${UI_SOURCES} ${MOCSrcs} ${UISrcs} ${RESOURCES_RCC})
TARGET_LINK_LIBRARIES(Widget ${QT_LIBRARIES})